--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,20 +6,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  {% if page.layout == 'home' or page.layout == 'post' %}
-    <meta name="pv-cache-enabled" content="{{ site.google_analytics.pv.enabled }}">
+  <meta name="pv-cache-enabled" content="{{ site.google_analytics.pv.enabled }}">
 
-    {% if site.google_analytics.pv.enabled %}
-      {% if site.google_analytics.pv.proxy_endpoint != ''
-        and site.google_analytics.pv.proxy_endpoint %}
-        <meta name="pv-proxy-endpoint" content="{{ site.google_analytics.pv.proxy_endpoint }}">
-      {% endif %}
-
-      {% if site.google_analytics.pv.cache %}
-        <meta name="pv-cache-data" content="{{ '/assets/js/data/pageviews.json' | relative_url }}">
-      {% endif %}
-
+  {% if site.google_analytics.pv.enabled %}
+    {% if site.google_analytics.pv.proxy_endpoint != ''
+      and site.google_analytics.pv.proxy_endpoint %}
+      <meta name="pv-proxy-endpoint" content="{{ site.google_analytics.pv.proxy_endpoint }}">
     {% endif %}
+
+    {% if site.google_analytics.pv.cache %}
+      <meta name="pv-cache-data" content="{{ '/assets/js/data/pageviews.json' | relative_url }}">
+    {% endif %}
+
   {% endif %}
 
   {% seo title=false %}
@@ -30,6 +28,20 @@
   {%- endunless -%}
     {{ site.title }}
   </title>
+
+    <link rel="preconnect" href="https://www.google-analytics.com" crossorigin="use-credentials">
+    <link rel="dns-prefetch" href="https://www.google-analytics.com">
+
+    <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin="anonymous">
+    <link rel="dns-prefetch" href="https://www.googletagmanager.com">
+
+    {% if site.google_analytics.pv.proxy_endpoint %}
+      {% assign proxy_url = site.google_analytics.pv.proxy_endpoint
+        | replace: "https://", "" | split: "/" | first | prepend: "https://" %}
+
+      <link rel="preconnect" href="{{ proxy_url }}" crossorigin="use-credentials">
+      <link rel="dns-prefetch" href="{{ proxy_url }}">
+    {% endif %}
 
 
 
