--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -29,3 +29,16 @@
     {{ page.extra_script }}
   </script>
 {% endif %}
+
+{% if site.google_analytics %}
+<script defer src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics.id }}"></script>
+<script>
+  document.addEventListener("DOMContentLoaded", function(event) {
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+
+    gtag('js', new Date());
+    gtag('config', '{{ site.google_analytics.id }}');
+  });
+</script>
+{% endif %}
